@@ -2,6 +2,12 @@
 VERSION 0.6.4cvs
 ================
 
+2005-03-28  Vincent Richard  <vincent@vincent-richard.net>
+
+ * messaging/POP3Store.cpp: fixed POP3Store::sendPacket() to send "\r\n"
+   in the same packet as the request. This caused problems with some
+   servers (thanks to Donald Dade).
+
 2005-03-27  Stefan Uhrig <stefanuhrig@gmx.net>
 
  * Added Windows platform handlers.
